# ugo-api-axum

./: Cargo.toml  Dockerfile
src/: main.rs
src/axum_routes/: mod.rs
src/axum_routes/generic_replies/: generic_log_writer.rs  generic_replies.rs  mod.rs
src/axum_routes/get_orders_by_page/: get_orders_by_page.rs  get_orders_by_page_structs.rs  mod.rs  total_rows_in_orders_sql.rs
src/axum_routes/routes/: mod.rs
src/axum_routes/write_route/: mod.rs  write_route.rs  write_route_sql.rs  write_route_structs.rs
src/bind_and_serve/: bindings.rs
src/generic_replies/: generic_log_writer.rs  generic_replies.rs
src/mysql/: check_form_data.rs  establish_connection.rs  mod.rs  refresh_pool_connection.rs
src/mysql/admins_filler/: async_admins_filler.rs  fill_admins_sql.rs  mod.rs
src/mysql/token_worker/: mod.rs  token_worker.rs
src/routers/: mod.rs
src/routers/crm/: admin_actions_crm.rs  login_actions_crm.rs  logs_actions_crm.rs  mod.rs
src/routers/ugo_vape/: mod.rs  ugo_vape_crm.rs  ugo_vape_web.rs
src/routers/walgreen/: mod.rs  walgreen_crm.rs  walgreen_web.rs
src/structs/: constants.rs  cors_layer.rs  enums.rs  extension_structs.rs  mod.rs  structs.rs  tool_functions.rs
src/tests/: check_connection_mysql.rs  check_if_port_is_open.rs  check_internet_connection.rs  check_mysql_file_location.rs  check_telegram_bot.rs  mod.rs
src/walgreen_bot_server/: bot_initializer.rs  bot_send_message_async.rs  mod.rs
src/walgreen_bot_server/new_note_preset/: format_last_note_query.rs  (+3 more)
src/wallgreen_bot_server/: bot_initializer.rs  bot_send_message_async.rs  mod.rs
(+177 files in other folders)
