[package]
name = "ugo-api-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.5", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
itertools = "0.12.1"
uuid = {version = "1.7.0", features = ["v4"]}
openssl = {version = "0.10.35", features = ["vendored"]}
online = "4.0.2"
futures = "0.3.30"
mysql = "24.0.0"
tower-http = { version = "0.5.2", features = ["cors"] }
port_scanner = "0.1.5"